--- a/resume.tex
+++ b/resume.tex
@@ -14,9 +14,18 @@
 
 \section{\centerline{EXPERIENCE}}
 
-\href{https://www.livekit.io/}{{\it LiveKit}} - Open Source WebRTC stack for building scalable, real-time audio and video experiences.  \hfill {\bf 2024 - *\space \space \space}
+\href{https://openai.com}{{\it OpenAI}} - American artificial intelligence (AI) organization.  \hfill {\bf 2024 - *\space \space \space}
 \begin{itemize}  \itemsep -2pt
-    \item Designed and Implemented SIP support for LiveKit
+    \item Wrote WebRTC Server + Azure Infrastructure
+    \item Added WebRTC/SIP/Microcontroller support to Realtime API
+    \item Shipped 1800-ChatGPT
+    \item Migrated ChatGPT Voice from LiveKit to Pion
+    \item Implemented browser take-over (via WebRTC) in ChatGPT Operator
+\end{itemize}
+
+\href{https://www.livekit.io/}{{\it LiveKit}} - Open Source WebRTC stack for building scalable, real-time audio and video experiences.  \hfill {\bf 2024 - 2024\space \space \space}
+\begin{itemize}  \itemsep -2pt
+    \item Designed and Implemented SIP support
     \item Responsible for customer success/integration challenges
     \item Performed outbound sales/cold calling
 \end{itemize}
@@ -62,23 +71,17 @@
 \href{https://webrtcforthecurious.com}{{\bf WebRTC for the Curious}} - \it{A book on how WebRTC really works.} \\
 \textup{Author, learn about the protocols of WebRTC. A book that goes beyond the APIs.}\\
 \\
-\href{https://github.com/awslabs/amazon-kinesis-video-streams-webrtc-sdk-c}{{\bf amazon-kinesis-video-streams-webrtc-sdk-c}} - \it{Embedded WebRTC Implementation} \\
-\textup{Designed and worked with team of 5 to implement. Used in IoT/Robotics.}\\
-\\
 \href{https://obsproject.com}{{\bf Open Broadcaster Software}} - \it{Open cross-platform screencasting and streaming app} \\
 \textup{Added WebRTC outputs and sources}\\
 \\
+\href{https://github.com/awslabs/amazon-kinesis-video-streams-webrtc-sdk-c}{{\bf amazon-kinesis-video-streams-webrtc-sdk-c}} - \it{Embedded WebRTC Implementation} \\
+\textup{Designed and worked with team of 5 to implement. Used in IoT/Robotics.}\\
+\\
+\href{https://github.com/Glimesh/broadcast-box}{{\bf Broadcast Box}} - \it{Self hosted streaming with WebRTC} \\
+\textup{Creator. Used to develop OBS WHIP Output}\\
+\\
 \href{https://gstreamer.freedesktop.org}{{\bf GStreamer}} - \it{Free pipeline-based multimedia framework.} \\
 \textup{Added \href{https://github.com/GStreamer/gst-plugins-bad/commits/master/ext/aom}{{\bf AV1}} support. Fixed bugs, added flvmux feature}\\
-\\
-\href{https://php.net}{{\bf PHP}} - \it{Scripting language especially suited to web development.} \\
-\textup{Added \href{https://wiki.php.net/rfc/class_const_visibility}{{\bf class constant visibility}} to the language. Ported msgpack, oauth, yaml and others to PHP 7}\\
-\\
-\href{https://janus.conf.meetecho.com}{{\bf Janus}} - \it{WebRTC gateway, mostly used for relaying RTP} \\
-\textup{Added ECDSA Cert generation, fixed bugs, small streaming features}\\
-\\
-\href{https://www.chromium.org/}{{\bf Chromium}} - \it{open-source Web browser project started by Google} \\
-\textup{Added support for Mediatek WebRTC H264 encoding on Android}\\
 \\
 
 \end{resume}
